fix initial slide visibility. hide section titles after mobile

--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -31,14 +31,16 @@ $footer-logo-size = 28px
     height: auto
     pointer-events: auto
     overflow: visible
-    
+  h3
+    display: none
+
 .gallery-item
   width: auto
   margin-bottom: 0
 
 .slick-slide
   opacity: .5
-  display: block
+  display: none
   margin: 0 $margin-small
   &.slick-active
     opacity: 1
